--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
   - title: "CV"
-    url: /assets/cv/cv_kimgeonung.pdf
+    url: /assets/cv/CV_Seokjun.pdf
   # - title: "Posts"
   #   url: /collection-archive/
-  - title: "Artworks"
-    url: /artworks/
+  # - title: "Artworks"
+  #   url: /artworks/
